# bitbox02-firmware

./: .clang-format  .clang-tidy  .codecov.yml  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pylintrc  .travis.yml  AGENTS.md  BUILD.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Jenkinsfile  Makefile  README.md  RELEASE-NOTES  SECURITY.md  arm.cmake  bitbox-da14531-firmware.bin.sha256  bootloader-stage0.ld  bootloader-stage1.ld  bootloader.ld  docker-compose.yml  firmware-blupgrade.ld  firmware.ld  matrix.json  rust-toolchain  versions.json
src/: CMakeLists.txt  attestation.c  attestation.h  backup.c  backup.h  base32.h  bip32.c  bip32.h  bt-factory-setup.h  common_main.c  common_main.h  communication_mode.c  communication_mode.h  compiler_util.h  da14531_flasher.c  da14531_flasher.h  delay.c  delay.h  factorysetup.c  firmware.c  firmware_main_loop.c  firmware_main_loop.h  flags.h  flash.c  flash.h  hardfault.c  hardfault.h  hww.c  hww.h  hww_api.c  hww_api.h  i2c_ecc.c  i2c_ecc.h  keyrotation.c  keyrotation.h  keystore.c  keystore.h  memory.c  memory.h  mpu.c  (+30 more)
src/atecc/: atecc.c  atecc.h  atecc_ops.c  command.c  command.h
src/backup/: backup.c  backup.h  backup_common.c  backup_common.h  restore.c  restore.h
src/bitboxbase/: bitboxbase.c  bitboxbase_background.c  bitboxbase_background.h  bitboxbase_screensaver.c  bitboxbase_screensaver.h  bitboxbase_status.c  bitboxbase_status.h  bitboxbase_watchdog.c  bitboxbase_watchdog.h
src/bootloader/: boot_args.h  bootloader.c  bootloader.h  bootloader_chunks.c  bootloader_chunks.h  bootloader_data.h  bootloader_firmware_jump.c  bootloader_firmware_jump.h  bootloader_format.c  bootloader_format.h  bootloader_graphics.c  bootloader_graphics.h  bootloader_hash.c  bootloader_hash.h  bootloader_product.h  bootloader_usb.c  bootloader_usb.h  bootloader_version.h.in  bootloader_version.h.tmpl  mpu.c  mpu.h  mpu_regions.c  mpu_regions.h  stage1_header.c  startup.c
src/bootloader_upgrade/: bootloader_upgrade.h  firmware_installer.c  firmware_installer.h  firmware_installer_check.c  firmware_installer_check.h  stage1_pubkeys.c  stage1_pubkeys.h
src/cipher/: cipher.c  cipher.h
src/commander/: commander.c  commander.h  commander_bitboxbase.c  commander_bitboxbase.h  commander_btc.c  commander_btc.h  commander_eth.c  commander_eth.h  commander_states.c  commander_states.h  protobuf.c  protobuf.h
src/da14531/: crc.c  crc.h  da14531.c  da14531.h  da14531_binary.h  da14531_flasher.c  da14531_flasher.h  da14531_handler.c  da14531_handler.h  da14531_protocol.c  da14531_protocol.h  da14531_serial_link.c  da14531_serial_link.h
src/drivers/: config.atstart  driver_init.c
src/fido2/: ctap.c  ctap.h  ctap_parse.c  ctap_parse.h  ctaphid.h  device.c  device.h  extensions.c  extensions.h  fido2_keys.c  fido2_keys.h  wallet.h
src/keystore/: keystore_antiklepto.c  keystore_antiklepto.h
src/lvgl/: lv_conf.h
src/memory/: bitbox02_smarteeprom.c  bitbox02_smarteeprom.h  memory.c  memory.h  memory_shared.c  memory_shared.h  memory_spi.c  memory_spi.h  mpu.c  mpu.h  nvmctrl.c  nvmctrl.h  smarteeprom.c  smarteeprom.h  spi_mem.c  spi_mem.h
src/mfi/: mfi.c  mfi.h
src/optiga/: optiga.c  optiga.h  optiga_ops.c  optiga_ops.h
src/optiga-pal/: README.bitbox02.md  README.md  optiga.c  optiga.h  pal.c  pal_crypt_mbedtls.c  pal_gpio.c  pal_i2c.c  pal_ifx_i2c_config.c  pal_logger.c  pal_os_datastore.c  pal_os_event.c  pal_os_lock.c  pal_os_memory.c  pal_os_timer.c
src/platform/: bitbox02_pins.h  bitboxbase_pins.h  driver_init.c  driver_init.h  platform_config.h  platform_init.c  platform_init.h
src/pukcc/: curve_p256.c  curve_p256.h  pukcc.c  pukcc.h
src/qtouch/: qtouch.c  qtouch.h  qtouch_bitbox02.h  qtouch_bitboxbase.h
src/rust/: .clippy.toml  Cargo.toml  README.md  bitbox02-cbindgen.toml  bitbox02-rust-cbindgen.toml  bitboxbase-cbindgen.toml  bootloader-cbindgen.toml  cbindgen.toml  commander-rust-cbindgen.toml  rust-toolchain.toml  rust.h  update-deps  vendor.sh
src/sd_mmc/: sd_mmc_ext.c  sd_mmc_ext.h  sd_mmc_start.c  sd_mmc_start.h
src/securechip/: securechip.c  securechip.h
src/touch/: gestures.c  gestures.h  gestures_bitboxbase.c  gestures_bitboxbase.h  gestures_impl.h
src/u2f/: u2f_app.c  u2f_app.h  u2f_keyhandle.c  u2f_keyhandle.h  u2f_packet.c  u2f_packet.h
src/ui/: canvas.c  canvas.h  component.h  event.h  event_handler.c  event_handler.h  screen_process.c  screen_process.h  screen_saver.c  screen_saver.h  screen_stack.c  screen_stack.h  ui_util.c  ui_util.h  workflow_stack.c  workflow_stack.h
src/usart/: usart.c  usart.h  usart_frame.c  usart_frame.h  usart_hww.c  usart_hww.h
src/usb/: noise.c  noise.h  usb.c  usb.h  usb_desc_bytes.h  usb_frame.c  usb_frame.h  usb_packet.c  usb_packet.h  usb_processing.c  usb_processing.h  usb_protocol_iap2.h
src/util/: util_string.c  util_string.h
src/workflow/: async.c  async.h  backup.c  backup.h  blocking.c  blocking.h  cancel.c  cancel.h  confirm.c  confirm.h  confirm_time.c  confirm_time.h  create_seed.c  create_seed.h  get_mnemonic_passphrase.c  get_mnemonic_passphrase.h  idle_workflow.c  idle_workflow.h  mnemonic.c  mnemonic.h  orientation_screen.c  orientation_screen.h  pairing.c  pairing.h  password.c  password.h  password_enter.c  password_enter.h  reboot.c  reboot.h  reset.c  reset.h  restore.c  restore.h  restore_from_mnemonic.c  restore_from_mnemonic.h  sdcard.c  sdcard.h  select_ctap_credential.c  select_ctap_credential.h  (+17 more)
test/device-test/: CMakeLists.txt  device-test.ld  loadfirmware.jlink  setup_test.py  test_all_variants_menu.py  test_backup.py  test_bip39.py  test_button_tap.py  test_confirm_bip39.py  test_entry_screen.py  test_password.py  test_scroll_menu.py  test_scroll_menu_2.py  test_simple_slide.py  test_slide_info.py  test_tap_menu.py  test_usb_big_reply.py  test_usb_cmd_process.py  test_usb_composed_ep_in.py  test_usb_composed_ep_out.py  test_usb_d_init.py  test_usb_hww_ep_in.py  test_usb_hww_ep_out.py  test_usb_u2f_ep_in.py  test_usb_u2f_ep_out.py  test_usbdc_init.py  test_write_sd.py
test/hardware-fakes/: CMakeLists.txt  (+1 more)
(+1807 files in other folders)
